reset and forget pass api done
